# stm32f0-cmake-boilerplate

./: .gitignore  CMakeLists.txt  LICENSE  README.md
